fix vertical scrollbar

--- a/index.css
+++ b/index.css
@@ -18,7 +18,7 @@ header{
     flex-direction: column;
     justify-content: space-around;
     height: 15%;
-    margin: 1rem 5rem;
+    padding: 1rem 5rem;
 }
 
 
